# cursors

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/coordinator_zomes/cursors/: Cargo.toml
crates/coordinator_zomes/cursors/src/: cursor.rs  lib.rs
crates/coordinator_zomes/profiles/: Cargo.toml
crates/integrity_zomes/cursors_integrity/: Cargo.toml
crates/integrity_zomes/cursors_integrity/src/: lib.rs
crates/integrity_zomes/cursors_integrity/src/cursor/: definition.rs
tests/src/: index.ts  utils.ts
tests/src/cursors/cursors/: cursor.ts
ui/: package.json
ui/src/: cursorBox.ts  holochain-app.ts
ui/src/components/cursors/cursors/: create-cursor.ts  cursor-detail.ts
ui/src/types/cursors/: cursors.ts
workdir/: web-happ.yaml
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
